--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="/logo.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dubai Tuskers RFC - One Team. One Dream. One Family.</title>
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Dubai Tuskers RFC - One Team. One Dream. One Family." />
+  <meta name="description"
+    content="Dubai Tuskers RFC is a premier rugby club in Dubai, UAE. Join us for Men's Rugby, Women's Rugby, and Touch Rugby. One Team. One Dream. One Family." />
+  <meta name="keywords"
+    content="dubai rugby, rugby club, dubai tuskers, men rugby, women rugby, touch rugby, dubai sports, expat rugby" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dubaituskers.com/" />
+  <meta property="og:title" content="Dubai Tuskers RFC - One Team. One Dream. One Family." />
+  <meta property="og:description"
+    content="Dubai Tuskers RFC is a premier rugby club in Dubai, UAE. Join us for Men's Rugby, Women's Rugby, and Touch Rugby. One Team. One Dream. One Family." />
+  <meta property="og:image" content="https://dubaituskers.com/logo.webp" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://dubaituskers.com/" />
+  <meta property="twitter:title" content="Dubai Tuskers RFC - One Team. One Dream. One Family." />
+  <meta property="twitter:description"
+    content="Dubai Tuskers RFC is a premier rugby club in Dubai, UAE. Join us for Men's Rugby, Women's Rugby, and Touch Rugby. One Team. One Dream. One Family." />
+  <meta property="twitter:image" content="https://dubaituskers.com/logo.webp" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
